Use a simple new Integer( -2 ) rather than Integer.valueOf( -2 ) Simplify adventure tallying slightly: eliminate a lot of overhead if change is 0
git-svn-id: http://svn.code.sf.net/p/kolmafia/code@6840 b29ace70-8910-0410-8dcc-aa2fc6433167